# bluespot-backend/internal/controller/swagger_response.go
@@ -25,3 +25,9 @@ type SwaggerUserInfoResponse struct {
 	Message string                 `json:"message" example:"success"`
 	Data    model.UserInfoResponse `json:"data"`
 }
+
+type SwaggerAttachUploadResponse struct {
+	Code    int                        `json:"code" example:"1000"`
+	Message string                     `json:"message" example:"success"`
+	Data    model.AttachUploadResponse `json:"data"`
+}
