# bluespot-backend/internal/model/attach_model.go
@@ -1,0 +1,7 @@
+package model
+
+type AttachUploadResponse struct {
+	FileName   string `json:"fileName"`
+	OriginName string `json:"originName"`
+	URL        string `json:"url"`
+}
